# backend-benchmark

./: .gitignore  Contribution.md  LICENSE  README.md  README_template.md  asset-manifest.json  index.html  results_data.json
.github/workflows/: deploy.yml
backends/rust/actix-web/: Cargo.toml  Dockerfile  docker-compose.yaml
backends/rust/actix-web/src/: main.rs  models.rs
backends/rust/actix-web/tests/: db_test.py  no_db_test.py
backends/rust/actix-web/tests/results/db_test/: benchmark_failures.csv  benchmark_stats.csv  benchmark_stats_history.csv  cpu_usage.csv  env_vars_and_hashes.txt
backends/rust/actix-web/tests/results/no_db_test/: benchmark_failures.csv  benchmark_stats.csv  benchmark_stats_history.csv  cpu_usage.csv  env_vars_and_hashes.txt
benchmark-app/: package-lock.json  package.json  processData.js
benchmark-app/public/: data.json  index.html
benchmark-app/src/: App.css  App.js
benchmark_visualizer/: README.md  pubspec.yaml
benchmark_visualizer/lib/: main.dart
benchmark_visualizer/linux/: CMakeLists.txt  my_application.cc
benchmark_visualizer/test/: widget_test.dart
benchmark_visualizer/web/: index.html  manifest.json
benchmark_visualizer/windows/: CMakeLists.txt
django-python/: create_graph.sh  docker-compose.yaml  docker_build_and_run.sh
django-python/benchmark/: Dockerfile
internal_scripts/: record_usages.sh  set_required_envs.sh  set_test_type.sh
scripts/: start_tests.sh  updater.sh
scripts/cleaning/: clean_docker_space.sh  delete_results.sh
scripts/graphs/: Dockerfile  create_graphs.sh  graph_generator.py
(+365 files in other folders)
